--- a/change_point.ipynb
+++ b/change_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 126,
    "metadata": {
     "collapsed": true
    },
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 127,
    "metadata": {
     "collapsed": false
    },
@@ -43,7 +43,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 128,
    "metadata": {
     "collapsed": false
    },
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 129,
    "metadata": {
     "collapsed": true
    },
@@ -80,7 +80,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 130,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +116,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "metadata": {
     "collapsed": false
    },
@@ -185,6 +185,27 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 134,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def mono_inter(x, y, xi):\n",
+    "    n = len(x)\n",
+    "    d = np.zeros(n)\n",
+    "    fail = util.noisy_fail()\n",
+    "    e01.nag_monotonic_interpolant(n, x, y, d, fail)\n",
+    "    m = len(xi)\n",
+    "    px = xi\n",
+    "    pf = np.zeros(m)\n",
+    "    fail = util.noisy_fail()\n",
+    "    e01.nag_monotonic_evaluate(n, x, y, d, m, px, pf, fail)\n",
+    "    return pf"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -193,17 +214,41 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 135,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
     "c = []\n",
+    "x_mono = []\n",
     "x = date.values.astype(float)\n",
     "for i in range(0,len(missing_dates.values)):\n",
     "    xi = missing_dates.values.astype(float)[i]\n",
+    "    x_mono.append(missing_dates.values.astype(float)[i])\n",
     "    c.append(interpolate(x, price, xi))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 136,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "c_mono = mono_inter(x, price, np.array(x_mono))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 137,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "c_mono_list = c_mono.tolist()"
    ]
   },
   {
@@ -215,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 138,
    "metadata": {
     "collapsed": false
    },
@@ -223,7 +268,8 @@
    "source": [
     "for row in all_data.iterrows():\n",
     "    if pd.isnull(row[1]['Close']):\n",
-    "        row[1]['Close'] = c.pop(0)"
+    "        #row[1]['Close'] = c.pop(0)\n",
+    "        row[1]['Close'] = c_mono_list.pop(0)"
    ]
   },
   {
@@ -235,7 +281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 139,
    "metadata": {
     "collapsed": false
    },
@@ -243,7 +289,7 @@
    "source": [
     "fig = plt.figure()\n",
     "plt.plot(date, price)\n",
-    "plt.plot(all_data.index, all_data['Close'], 'x')\n",
+    "plt.plot(all_data.index, all_data['Close'])\n",
     "plt.show()"
    ]
   },
@@ -256,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 140,
    "metadata": {
     "collapsed": false
    },
@@ -268,7 +314,7 @@
     "beta = 1 * np.log(n)\n",
     "minss = 2\n",
     "param = np.ndarray(1)\n",
-    "param[0] = 0.1\n",
+    "param[0] = 1.0\n",
     "ntau = np.zeros(n, dtype=int)\n",
     "tau = np.zeros(n, dtype=int)\n",
     "sparam = np.zeros(2*n+2)\n",
@@ -287,7 +333,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 141,
    "metadata": {
     "collapsed": false
    },
@@ -320,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 142,
    "metadata": {
     "collapsed": false
    },
