--- a/change_point.ipynb
+++ b/change_point.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 14,
    "metadata": {
     "collapsed": true
    },
@@ -25,13 +25,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
    "outputs": [],
    "source": [
-    "data = pd.read_json('yahoo.json')"
+    "data = pd.read_json('volks.json')\n",
+    "#data = pd.read_csv('volks.csv')"
    ]
   },
   {
@@ -43,14 +44,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 4,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": true
    },
    "outputs": [],
    "source": [
-    "price = data.Close.sort_index().values\n",
-    "date = data.index.order()"
+    "#data['Date'] = pd.to_datetime(data['Date'], format=\"%d/%m/%Y\")\n",
+    "#data = data.set_index('Date')\n",
+    "date = data.index.order()\n",
+    "price = data.Close.sort_index().values"
    ]
   },
   {
@@ -62,9 +66,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 5,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
@@ -80,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -98,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -116,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -167,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 9,
    "metadata": {
     "collapsed": false
    },
@@ -186,7 +190,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 134,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -214,7 +218,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 135,
+   "execution_count": 11,
    "metadata": {
     "collapsed": false
    },
@@ -231,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 136,
+   "execution_count": 12,
    "metadata": {
     "collapsed": false
    },
@@ -242,7 +246,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 137,
+   "execution_count": 13,
    "metadata": {
     "collapsed": false
    },
@@ -260,7 +264,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 138,
+   "execution_count": 31,
    "metadata": {
     "collapsed": false
    },
@@ -269,7 +273,7 @@
     "for row in all_data.iterrows():\n",
     "    if pd.isnull(row[1]['Close']):\n",
     "        #row[1]['Close'] = c.pop(0)\n",
-    "        row[1]['Close'] = c_mono_list.pop(0)"
+    "        all_data.loc[row[0], 'Close'] = c_mono_list.pop(0)"
    ]
   },
   {
@@ -281,7 +285,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 32,
    "metadata": {
     "collapsed": false
    },
@@ -289,9 +293,30 @@
    "source": [
     "fig = plt.figure()\n",
     "plt.plot(date, price)\n",
-    "plt.plot(all_data.index, all_data['Close'])\n",
+    "plt.plot(all_data.index, all_data['Close'],'x')\n",
     "plt.show()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'g13' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-1-919bf4c57de7>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m()\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mg13\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mnag_tsa_mean_range\u001b[0m\u001b[1;33m(\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m: name 'g13' is not defined"
+     ]
+    }
+   ],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -302,7 +327,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 140,
+   "execution_count": 33,
    "metadata": {
     "collapsed": false
    },
@@ -333,7 +358,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 141,
+   "execution_count": 34,
    "metadata": {
     "collapsed": false
    },
@@ -366,7 +391,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 142,
+   "execution_count": 35,
    "metadata": {
     "collapsed": false
    },
