--- a/mongodb_change_point.ipynb
+++ b/mongodb_change_point.ipynb
@@ -512,7 +512,7 @@
    },
    "outputs": [],
    "source": [
-    "dist = g13.Nag_TS_ChangeType()\n",
+    "dist = util.Nag_TS_ChangeType()\n",
     "dist_change_point_type_dict = {'Nag_NormalMean': util.Nag_NormalMean, \n",
     "                              'Nag_NormalStd': util.Nag_NormalStd, \n",
     "                              'Nag_NormalMeanStd': util.Nag_NormalMeanStd, \n",
