spelling mistake in name, add .gitignore and now working on non mongodb version

--- a/nag4py_changepoint_pelt_with_mongodb.ipynb
+++ b/nag4py_changepoint_pelt_with_mongodb.ipynb
@@ -384,11 +384,11 @@
     "        y is the known prices\n",
     "        md is the missing dates\"\"\"\n",
     "    d = np.zeros(len(x))\n",
-    "    fail = util.noisy_fail()\n",
-    "    e01.nag_monotonic_interpolant(len(x), x, y, d, fail)\n",
+    "    fail_int = util.noisy_fail()\n",
+    "    e01.nag_monotonic_interpolant(len(x), x, y, d, fail_int)\n",
     "    missing_prices = np.zeros(len(missing_dates))\n",
-    "    fail = util.noisy_fail()\n",
-    "    e01.nag_monotonic_evaluate(len(x), x, y, d, len(missing_dates), missing_dates, missing_prices, fail)\n",
+    "    fail_eva = util.noisy_fail()\n",
+    "    e01.nag_monotonic_evaluate(len(x), x, y, d, len(missing_dates), missing_dates, missing_prices, fail_eva)\n",
     "    if fail.iflag != 0:\n",
     "        print fail.message\n",
     "    return missing_prices"
