fixed a fail error in both and removed mongodb from non mongodb version

--- a/nag4py_changepoint_pelt_with_mongodb.ipynb
+++ b/nag4py_changepoint_pelt_with_mongodb.ipynb
@@ -389,7 +389,7 @@
     "    missing_prices = np.zeros(len(missing_dates))\n",
     "    fail_eva = util.noisy_fail()\n",
     "    e01.nag_monotonic_evaluate(len(x), x, y, d, len(missing_dates), missing_dates, missing_prices, fail_eva)\n",
-    "    if fail.iflag != 0:\n",
+    "    if fail_eva.iflag != 0:\n",
     "        print fail.message\n",
     "    return missing_prices"
    ]
